# SwanOS

./: .gitignore  LLM_BRIDGE.md  Makefile  README.md  SwanOS.docx  bridge.py  build.out  config.py  diff.txt  fix2_desk.py  fix_desk.py  grub.cfg  linker.ld  llm_bridge.py  log.txt  main.py  patch_desktop.py  requirements.txt  rewrite_desk.py  run_gui.bat  start_swanos.bat  swanos_gui.py  v1.py
.agents/workflows/: build.md
drivers/: __init__.py  code_executor.py  filesystem.py  web_search.py
kernel/: __init__.py  core.py  scheduler.py
src/: audit.c  audit.h  boot.asm  cxxabi.cpp  desktop.c  desktop.h  fs.c  fs.h  game.c  game.h  gdt.c  gdt.h  gdt_asm.asm  gui.c  gui.h  gui_gfx.c  gui_gfx.h  idt.c  idt.h  idt_asm.asm  kernel.c  kernel_ai.c  kernel_ai.h  keyboard.c  keyboard.h  llm.c  llm.h  memory.c  memory.h  mouse.c  mouse.h  multiboot.h  network.c  network.h  paging.c  paging.h  paging_asm.asm  ports.h  process.c  process.h  (+20 more)
swanos_gui/: CMakeLists.txt  boot_splash.cpp  boot_splash.h  colors.h  desktop.cpp  desktop.h  llm_client.cpp  llm_client.h  login_screen.cpp  login_screen.h  main.cpp  particle.h  pipe_connection.cpp  pipe_connection.h  serial_worker.cpp  serial_worker.h  sidebar.cpp  sidebar.h  swanos_window.cpp  swanos_window.h  terminal.cpp  terminal.h
